--- a/src/components/HomePage/scrollToTop.css
+++ b/src/components/HomePage/scrollToTop.css
@@ -7,7 +7,7 @@
   border-radius: 50%;
   border: none;
 
-  background-color: #1ec9d5;
+  background-color: #000000;
   color: #fff;
   
   cursor: pointer;
