--- a/src/components/HomePage/Home.css
+++ b/src/components/HomePage/Home.css
@@ -17,7 +17,7 @@ body {
 .home-page {
   width: 100%;
   min-height: 100vh;
-  background-color: #f8fafc;
+  background-color: #efc780;
 }
 
 /* ===============================
@@ -72,7 +72,7 @@ body {
   align-items: center;
   justify-content: center;
   font-size: 18px;
-  color: #64748b;
+  color: #949c59;
 }
 
 /* ===============================
