--- a/src/components/HomePage/footer.css
+++ b/src/components/HomePage/footer.css
@@ -1,8 +1,8 @@
 .footer {
-  background-color: #0f172a;
+  background-color: #150f01;
   color: #e5e7eb;
   padding: 40px 20px 20px;
-  margin-top: 60px;
+  /* margin-top: 60px; */
   width: 100%;
   /* height: 70vh; */
 }
@@ -26,7 +26,7 @@
 .footer-brand {
   font-size: 22px;
   margin-bottom: 10px;
-  color: #38bdf8;
+  color: #f0c682;
 }
 
 .footer-text {
@@ -43,16 +43,16 @@
   font-size: 14px;
   margin-bottom: 8px;
   cursor: pointer;
-  color: #cbd5f5;
+  color: #f6dc85;
 }
 
 .footer-section ul li:hover {
-  color: #38bdf8;
+  color: #f3bb6c;
 }
 
 .footer-bottom {
   text-align: center;
-  margin-top: 30px;
+  /* margin-top: 30px; */
   padding-top: 15px;
   border-top: 1px solid #1e293b;
   font-size: 13px;
