--- a/src/components/Admin/adminProducts.css
+++ b/src/components/Admin/adminProducts.css
@@ -3,9 +3,9 @@
    ADD PRODUCT BUTTON
 ========================= */
 .admin-add-btn {
-  background-color: #1096c3;
+  background-color: #ffbc7e;
   color: #fff;
-  border: none;
+  border: solid 1px;
   padding: 10px 18px;
   font-size: 14px;
   border-radius: 8px;
@@ -15,14 +15,17 @@
 }
 
 .admin-add-btn:hover {
-  background-color: #0b7aa1;
+  background-color: #000405;
+}
+.admin-page h2{
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 /* =========================
    FORM
 ========================= */
 .admin-form {
-  background: #2db9dc;
+  background: #ffbc7e;
   border-radius: 12px;
   padding: 50px;
   padding-left: 30px;
@@ -50,7 +53,7 @@
 
 .admin-form input:focus {
   outline: none;
-  border-color: #1096c3;
+  border-color: #000000;
 }
 
 /* =========================
@@ -73,7 +76,7 @@
 }
 
 .form-actions button:first-child {
-  background: #16a34a;
+  background: #000000;
   color: #fff;
 }
 
@@ -141,13 +144,13 @@
 }
 
 .admin-table button:first-child {
-  background: #3b82f6;
+  background: #ffbc7e;
   color: #fff;
   margin-bottom: 10px;
 }
 
 .admin-table button:first-child:hover {
-  background: #2563eb;
+  background: #000000;
 }
 
 .admin-table .danger {
